# CrimsonThrone

./: .gitignore  CMakeLists.txt  DEV.md  Doxyfile  LICENSE  Makefile  Makefile~  README.md  debug.cpp  debug.h  install.sh  main  main.1.trace  main.cpp  main.trace  physics_test.py  quest.cpp  questgoal.cpp  questgoal.hpp  test.cpp  test.cpp~  test.save
.github/workflows/: codeql-analysis.yml
UI/: abstractListElement.cpp  abstractListElement.h  bar.cpp  bar.h  casterToList.cpp  casterToList.h  character.h  column.cpp  column.h  column.hpp  container.cpp  container.h  container.hpp  frame.cpp  frame.h  frame.hpp  image.cpp  image.h  list.cpp  list.h  list.hpp  text.cpp  text.h  text.hpp
base/: #armor.h#  .#armor.cpp  actor.cpp  actor.cpp~  actor.h  actor.h~  armor.cpp  armor.cpp~  armor.h  armor.hpp  armor.h~  boots.cpp  boots.cpp~  boots.h  boots.h~  boundarytrigger.cpp  boundarytrigger.h  boundarytrigger.hpp  chestplate.cpp  chestplate.cpp~  chestplate.h  chestplate.hpp  chestplate.h~  chunk.cpp  chunk.h  chunk.hpp  entries.h  entries.h~  gloves.cpp  gloves.cpp~  gloves.h  gloves.h~  healpotion.cpp  healpotion.cpp~  healpotion.h  healpotion.h~  helmet.cpp  helmet.cpp~  helmet.h  helmet.h~  (+56 more)
base/magic/: abscore.cpp  abscore.h  core.cpp  core.h  darkcore.cpp  darkcore.h  elementcore.cpp  elementcore.h  elementpiece.cpp  elementpiece.h  elementpiececore.cpp  elementpiececore.h  firecore.cpp  firecore.h  magic.h  objectcontrolcore.cpp  objectcontrolcore.h  protocore.cpp  symbols.cpp  symbols.h  voidcore.cpp  voidcore.h
cmake/: FindOPENALSOFT.cmake  FindOpenALSoft.cmake
docs/: classes.svg~  classes.uml  classes.uml~
docs/html/: _r_e_a_d_m_e_8md.html  abscore_8cpp.html  abscore_8cpp__incl.map  abscore_8cpp__incl.md5  abscore_8h.html  abscore_8h__dep__incl.map  abscore_8h__dep__incl.md5  abscore_8h__incl.map  abscore_8h__incl.md5  abscore_8h_source.html  actor_8cpp.html  actor_8cpp__incl.map  actor_8h.html  (+1217 more)
lib/: OpenAL32.lib  assimp.lib
magic/: abscore.cpp  abscore.h  firecore.cpp  protocore.h
math/: vectors.cpp  vectors.h
physics/: boundary.cpp  boundary.h  physicalObj.cpp  physicalObj.h  physicalObj.hpp  terrain.cpp  terrain.h  terrain.hpp
render/: camera.cpp  camera.h  camera.hpp  constants.h  imageLoader.cpp  imageLoader.h  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp  shaderHolder.cpp  shaderHolder.h  shaderHolder.hpp  shaderLoader.cpp  shaderLoader.h  shaderLoader.hpp
resources/: settings.ini
scripts/: gen-uml.py
sound/: filesound.cpp  filesound.h  load_wav.h  sound.cpp  sound.h  soundengine.cpp  soundengine.h  soundplayer.cpp  soundplayer.h  voice.cpp  voice.h
src/: constants.cpp  debug.cpp  debug.hpp
(+367 files in other folders)
